Last before API

--- a/explore_dataq.qmd
+++ b/explore_dataq.qmd
@@ -4,25 +4,59 @@ format: html
 editor: visual
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document.
-To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code.
-You can embed code like this:
-
 ```{r}
-1 + 1
+#| label: setup
+library(readxl)
+library(tidyverse)
+library(writexl)
+library(PxWebApiData)
 ```
 
-You can add options to executable code like this
-
 ```{r}
-#| echo: false
-2 * 2
+Ssb10540 <- read_excel("Ssb10540.xlsx")
+
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+```{r}
+#| eval: false
+View(Ssb10540)
+```
+
+```{r}
+names(Ssb10540)
+```
+
+```{r}
+names(Ssb10540) <-c("knr","alder", "mnd", "arbl")
+```
+
+```{r}
+Ssb10540 <- fill(Ssb10540,knr,alder, .direction = "down")
+```
+
+## lagre data
+
+```{r}
+x <-5
+```
+
+```{r}
+save(Ssb10540, x, file = "my-first-data.RData")
+rm(Ssb10540, x)
+```
+
+```{r}
+load(file = "my-first-data.RData")
+```
+
+```{r}
+write_xlsx(
+  x= Ssb10540, 
+  path = "ssb10540.xlsx")
+
+```
+
+```{r}
+write_csv(Ssb10540, file = "ssb10540.csv")
+```
+
